--- a/index.html
+++ b/index.html
@@ -1,50 +1,52 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SONKO - Online Shopping</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Roboto', sans-serif;
-        background-color: #f5f5f5;
-        -webkit-tap-highlight-color: transparent;
-      }
-      .line-clamp-2 {
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-      }
-      .no-scrollbar::-webkit-scrollbar { display: none; }
-      .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
-      
-      @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-      @keyframes slideUp { from { transform: translateY(100%); } to { transform: translateY(0); } }
-      @keyframes scaleIn { from { transform: scaleX(0); } to { transform: scaleX(1); } }
-      @keyframes blink { 0%, 90%, 100% { opacity: 1; transform: scaleY(1); } 95% { opacity: 0.3; transform: scaleY(0.1); } }
-      
-      .animate-fadeIn { animation: fadeIn 0.3s ease-out forwards; }
-      .animate-slideUp { animation: slideUp 0.3s ease-out forwards; }
-      .animate-scaleIn { animation: scaleIn 0.2s ease-out forwards; transform-origin: left; }
-      .animate-blink { animation: blink 3s infinite; }
-    </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
-  }
-}
-</script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>SONKO - Online Shopping</title>
+
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+    rel="stylesheet"
+  />
+
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f5f5f5;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .line-clamp-2 {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+    .no-scrollbar::-webkit-scrollbar { display: none; }
+    .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+    @keyframes slideUp { from { transform: translateY(100%); } to { transform: translateY(0); } }
+    @keyframes scaleIn { from { transform: scaleX(0); } to { transform: scaleX(1); } }
+    @keyframes blink { 0%, 90%, 100% { opacity: 1; transform: scaleY(1); } 95% { opacity: 0.3; transform: scaleY(0.1); } }
+
+    .animate-fadeIn { animation: fadeIn 0.3s ease-out forwards; }
+    .animate-slideUp { animation: slideUp 0.3s ease-out forwards; }
+    .animate-scaleIn { animation: scaleIn 0.2s ease-out forwards; transform-origin: left; }
+    .animate-blink { animation: blink 3s infinite; }
+  </style>
+
+  <!-- ❌ Remove importmap (Vite uses npm deps, not CDN React) -->
 </head>
+
 <body class="overflow-x-hidden">
-    <div id="root"></div>
+  <div id="root"></div>
+
+  <!-- ✅ THIS is what makes Vite bundle and run your app -->
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
